# python_for_data_science

python_0_starting/ex04/: whatis.py
python_0_starting/ex06/: ft_filter.py
python_0_starting/ex07/: sos.py
python_0_starting/ex08/: Loading.py
python_0_starting/ex09/ft_package/: LICENSE  README.md  pyproject.toml
python_1_array/ex00/: give_bmi.py
python_1_array/ex01/: array2D.py
python_1_array/ex02/: load_image.py  tester.py
python_1_array/ex03/: load_image.py  zoom.py
python_1_array/ex04/: load_image.py  rotate.py
python_1_array/ex05/: load_image.py  pimp_image.py
python_for_data_science/python_0_starting/ex00/: Hello.py
python_for_data_science/python_0_starting/ex01/: format_ft_time.py
python_for_data_science/python_0_starting/ex03/: NULL_not_found.py
python_for_data_science/python_0_starting/ex05/: building.py
python_for_data_science/python_0_starting/ex06/: filterstring.py
python_for_data_science/python_0_starting/ex09/ft_package/: pyproject.toml
